# vslam-homework

./: README.md
ch2/homework/: CMakeLists.txt
ch2/homework/src/: hw2_2.cpp  hw2_3.cpp
ch3/hw/: CMakeLists.txt
ch3/hw/src/: draw_trajectory.cpp
ch4/: .~第四讲：相机模型与非线性优化.pptx
ch4/hw/disparity/: CMakeLists.txt
ch4/hw/disparity/src/: disparity.cpp
ch4/hw/gaussnewton/: CMakeLists.txt
ch4/hw/gaussnewton/src/: gaussnewton.cpp
ch4/hw/undistort_image/: CMakeLists.txt
ch4/hw/undistort_image/src/: undistort_image.cpp
ch5/hw/E2Rt/: CMakeLists.txt
ch5/hw/E2Rt/src/: E2Rt.cpp
ch5/hw/GN-BA/: CMakeLists.txt
ch5/hw/GN-BA/src/: GN-BA.cpp
ch5/hw/ICP/: CMakeLists.txt
ch5/hw/ICP/src/: ICP.cpp
ch5/hw/computerORB/: CMakeLists.txt
ch5/hw/computerORB/src/: computeORB.cpp
